--- a/AutomationFramework/test-output/emailable-report.html
+++ b/AutomationFramework/test-output/emailable-report.html
@@ -9,19 +9,19 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">17,840</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">12,609</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">ebayTests.ElementTests</td><td><a href="#m0">SpotlightTest</a></td><td rowspan="1">1647897380310</td><td rowspan="1">61</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">ebayTests.ElementTests</td><td><a href="#m1">fashionAndElectronics</a></td><td rowspan="1">1647897380376</td><td rowspan="1">5324</td></tr><tr class="passedeven"><td><a href="#m2">hgAndCollectibles</a></td><td rowspan="1">1647897385701</td><td rowspan="1">2975</td></tr><tr class="passedeven"><td><a href="#m3">hgAndSportingGoods</a></td><td rowspan="1">1647897388677</td><td rowspan="1">4695</td></tr><tr class="passedeven"><td><a href="#m4">motorsAndFashion</a></td><td rowspan="1">1647897393373</td><td rowspan="1">4752</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">ebayTests.ProductsPageTests</td><td><a href="#m0">enterMinAndMax</a></td><td rowspan="1">1647923907188</td><td rowspan="1">10047</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">ebayTests.ProductsPageTests</td><td><a href="#m1">searchAndRefinePrice</a></td><td rowspan="1">1647923917239</td><td rowspan="1">2532</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">ebayTests.ElementTests#SpotlightTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//*[@id=&quot;refit-spf-container&quot;]/div[2]/div[2]/div[1]/div/div/div/a/h3/span/span&quot;}
+<h2>Default test</h2><h3 id="m0">ebayTests.ProductsPageTests#enterMinAndMax</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//*[@id=&quot;s0-62-10-0-1-2-6-0-6[3]-0-textrange-beginParamValue-textbox&quot;]&quot;}
   (Session info: chrome=99.0.4844.74)
 For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
 Build info: version: &apos;4.1.1&apos;, revision: &apos;e8fcc2cecf&apos;
 System info: host: &apos;DESKTOP-PB18A7O&apos;, ip: &apos;192.168.0.241&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;16.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [3cb725bbf2b3041f155867b10bcf0c4a, findElement {using=xpath, value=//*[@id=&quot;refit-spf-container&quot;]/div[2]/div[2]/div[1]/div/div/div/a/h3/span/span}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 99.0.4844.74, chrome: {chromedriverVersion: 99.0.4844.51 (d537ec02474b5..., userDataDir: C:\Users\catni\AppData\Loca...}, goog:chromeOptions: {debuggerAddress: localhost:58189}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:58189/devtoo..., se:cdpVersion: 99.0.4844.74, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Session ID: 3cb725bbf2b3041f155867b10bcf0c4a
+Command: [f857027ef30da5b2598f461ce6545c47, findElement {using=xpath, value=//*[@id=&quot;s0-62-10-0-1-2-6-0-6[3]-0-textrange-beginParamValue-textbox&quot;]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 99.0.4844.74, chrome: {chromedriverVersion: 99.0.4844.51 (d537ec02474b5..., userDataDir: C:\Users\catni\AppData\Loca...}, goog:chromeOptions: {debuggerAddress: localhost:49970}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:49970/devtoo..., se:cdpVersion: 99.0.4844.74, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: f857027ef30da5b2598f461ce6545c47
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:78)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -38,8 +38,8 @@ Session ID: 3cb725bbf2b3041f155867b10bcf0c4a
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:60)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:367)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:359)
-	at pageObjects.DailyDealsPage.clickSpotlight(DailyDealsPage.java:23)
-	at ebayTests.ElementTests.SpotlightTest(ElementTests.java:75)
+	at pageObjects.ProductsPage.enterMinPrice(ProductsPage.java:43)
+	at ebayTests.ProductsPageTests.enterMinAndMax(ProductsPageTests.java:39)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -69,9 +69,6 @@ Session ID: 3cb725bbf2b3041f155867b10bcf0c4a
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">ebayTests.ElementTests#fashionAndElectronics</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">ebayTests.ElementTests#hgAndCollectibles</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">ebayTests.ElementTests#hgAndSportingGoods</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">ebayTests.ElementTests#motorsAndFashion</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">ebayTests.ProductsPageTests#searchAndRefinePrice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
