--- a/AutomationFramework/test-output/index.html
+++ b/AutomationFramework/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\catni\AppData\Local\Temp\testng-eclipse-1967068963\testng-customsuite.xml</span>
+                    <span>C:\Users\catni\AppData\Local\Temp\testng-eclipse--432256873\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods, 1 failed,   4 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ebayTests.ElementTests" class="method navigator-link" hash-for-method="SpotlightTest">SpotlightTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="ebayTests.ProductsPageTests" class="method navigator-link" hash-for-method="enterMinAndMax">enterMinAndMax</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -118,22 +118,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ebayTests.ElementTests" class="method navigator-link" hash-for-method="fashionAndElectronics">fashionAndElectronics</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ebayTests.ElementTests" class="method navigator-link" hash-for-method="hgAndCollectibles">hgAndCollectibles</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ebayTests.ElementTests" class="method navigator-link" hash-for-method="hgAndSportingGoods">hgAndSportingGoods</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ebayTests.ElementTests" class="method navigator-link" hash-for-method="motorsAndFashion">motorsAndFashion</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="ebayTests.ProductsPageTests" class="method navigator-link" hash-for-method="searchAndRefinePrice">searchAndRefinePrice</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -151,23 +136,23 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">ebayTests.ElementTests</span>
+              <span class="class-name">ebayTests.ProductsPageTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="SpotlightTest">
-                  </a> <!-- SpotlightTest -->
-                  <span class="method-name">SpotlightTest</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//*[@id=&quot;refit-spf-container&quot;]/div[2]/div[2]/div[1]/div/div/div/a/h3/span/span&quot;}
+                  <a name="enterMinAndMax">
+                  </a> <!-- enterMinAndMax -->
+                  <span class="method-name">enterMinAndMax</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//*[@id=&quot;s0-62-10-0-1-2-6-0-6[3]-0-textrange-beginParamValue-textbox&quot;]&quot;}
   (Session info: chrome=99.0.4844.74)
 For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
 Build info: version: &apos;4.1.1&apos;, revision: &apos;e8fcc2cecf&apos;
 System info: host: &apos;DESKTOP-PB18A7O&apos;, ip: &apos;192.168.0.241&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;16.0.2&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [3cb725bbf2b3041f155867b10bcf0c4a, findElement {using=xpath, value=//*[@id=&quot;refit-spf-container&quot;]/div[2]/div[2]/div[1]/div/div/div/a/h3/span/span}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 99.0.4844.74, chrome: {chromedriverVersion: 99.0.4844.51 (d537ec02474b5..., userDataDir: C:\Users\catni\AppData\Loca...}, goog:chromeOptions: {debuggerAddress: localhost:58189}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:58189/devtoo..., se:cdpVersion: 99.0.4844.74, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Session ID: 3cb725bbf2b3041f155867b10bcf0c4a
+Command: [f857027ef30da5b2598f461ce6545c47, findElement {using=xpath, value=//*[@id=&quot;s0-62-10-0-1-2-6-0-6[3]-0-textrange-beginParamValue-textbox&quot;]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 99.0.4844.74, chrome: {chromedriverVersion: 99.0.4844.51 (d537ec02474b5..., userDataDir: C:\Users\catni\AppData\Loca...}, goog:chromeOptions: {debuggerAddress: localhost:49970}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:49970/devtoo..., se:cdpVersion: 99.0.4844.74, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: f857027ef30da5b2598f461ce6545c47
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:78)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -184,8 +169,8 @@ Session ID: 3cb725bbf2b3041f155867b10bcf0c4a
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:60)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:367)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:359)
-	at pageObjects.DailyDealsPage.clickSpotlight(DailyDealsPage.java:23)
-	at ebayTests.ElementTests.SpotlightTest(ElementTests.java:75)
+	at pageObjects.ProductsPage.enterMinPrice(ProductsPage.java:43)
+	at ebayTests.ProductsPageTests.enterMinAndMax(ProductsPageTests.java:39)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -223,35 +208,14 @@ Session ID: 3cb725bbf2b3041f155867b10bcf0c4a
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">ebayTests.ElementTests</span>
+              <span class="class-name">ebayTests.ProductsPageTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="fashionAndElectronics">
-                  </a> <!-- fashionAndElectronics -->
-                  <span class="method-name">fashionAndElectronics</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="hgAndCollectibles">
-                  </a> <!-- hgAndCollectibles -->
-                  <span class="method-name">hgAndCollectibles</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="hgAndSportingGoods">
-                  </a> <!-- hgAndSportingGoods -->
-                  <span class="method-name">hgAndSportingGoods</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="motorsAndFashion">
-                  </a> <!-- motorsAndFashion -->
-                  <span class="method-name">motorsAndFashion</span>
+                  <a name="searchAndRefinePrice">
+                  </a> <!-- searchAndRefinePrice -->
+                  <span class="method-name">searchAndRefinePrice</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -259,7 +223,7 @@ Session ID: 3cb725bbf2b3041f155867b10bcf0c4a
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\catni\AppData\Local\Temp\testng-eclipse-1967068963\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\catni\AppData\Local\Temp\testng-eclipse--432256873\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -268,7 +232,7 @@ Session ID: 3cb725bbf2b3041f155867b10bcf0c4a
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;ebayTests.ElementTests&quot;/&gt;
+      &lt;class name=&quot;ebayTests.ProductsPageTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -308,32 +272,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'fashionAndElectronics')
-data.setCell(0, 2, 'ebayTests.ElementTests')
-data.setCell(0, 3, 5324);
+data.setCell(0, 1, 'enterMinAndMax')
+data.setCell(0, 2, 'ebayTests.ProductsPageTests')
+data.setCell(0, 3, 10047);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'motorsAndFashion')
-data.setCell(1, 2, 'ebayTests.ElementTests')
-data.setCell(1, 3, 4752);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'hgAndSportingGoods')
-data.setCell(2, 2, 'ebayTests.ElementTests')
-data.setCell(2, 3, 4695);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'hgAndCollectibles')
-data.setCell(3, 2, 'ebayTests.ElementTests')
-data.setCell(3, 3, 2975);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'SpotlightTest')
-data.setCell(4, 2, 'ebayTests.ElementTests')
-data.setCell(4, 3, 61);
+data.setCell(1, 1, 'searchAndRefinePrice')
+data.setCell(1, 2, 'ebayTests.ProductsPageTests')
+data.setCell(1, 3, 2532);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -359,28 +311,16 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">ebayTests.ElementTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">ebayTests.ProductsPageTests</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">SpotlightTest</span>
+                <span class="method-name">enterMinAndMax</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">fashionAndElectronics</span>
-                <span class="method-start">66 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">hgAndCollectibles</span>
-                <span class="method-start">5391 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">hgAndSportingGoods</span>
-                <span class="method-start">8367 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">motorsAndFashion</span>
-                <span class="method-start">13063 ms</span>
+                <span class="method-name">searchAndRefinePrice</span>
+                <span class="method-start">10051 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
